// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render with component as child 1`] = `
<div>
  <a
    class="sc-gsTCUz duOMGZ"
    href="#"
  >
    <span
      class="sc-bdfBwQ klWFfv"
    >
      Hi i am Name
    </span>
  </a>
</div>
`;

exports[`Link should render with default props 1`] = `
<div>
  <a
    class="sc-gsTCUz duOMGZ"
    href="#"
  >
    <span
      class="sc-bdfBwQ klWFfv"
    >
      Test
    </span>
  </a>
</div>
`;
